--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,9 @@ Variables
 
 :root {
   /* dark shades of primary color*/
-  --main-yellow: blue;
-  --dark-yellow: blue;
-  --main-red: blue;
+  --main-yellow: pink;
+  --dark-yellow: pink;
+  --main-red: pink;
   --dark-red: rgb(125, 1, 1);
   --clr-black: white;
   --clr-white: #fff;
